fixed z-index bugs

--- a/src/components/checkIn/styles/styles.css
+++ b/src/components/checkIn/styles/styles.css
@@ -7,7 +7,7 @@
 .checkinBg {
   background-image: url('../../../images/loginBackground2.jpg');
   position: fixed;
-  z-index: -1;
+  z-index: -99;
   top: 0;
   left: 0;
   opacity: .5;
@@ -42,6 +42,14 @@
 
 .marginBottom5p {
   margin-bottom: 5px;
+}
+
+.zindex1 {
+  z-index: 1;
+}
+
+.zindex2 {
+  z-index: 2;
 }
 
 #hpiSubmitButton {
