--- a/src/components/layout/styles/styles.css
+++ b/src/components/layout/styles/styles.css
@@ -2,12 +2,3 @@
 #navBar{
   background-color: #F7F7F7;
 }
-
-.NavBar-logo {
-  animation: NavBar-logo-spin infinite 10s linear;
-}
-
-@keyframes NavBar-logo-spin {
-  from { transform: rotate(0deg);}
-  to { transform: rotate(360deg);}
-}
