--- a/src/components/physicians/styles/styles.css
+++ b/src/components/physicians/styles/styles.css
@@ -7,7 +7,7 @@
 .bg {
   background-image: url('../../../images/loginBackground2.jpg');
   position: fixed;
-  z-index: -1;
+  z-index: -99;
   top: 0;
   left: 0;
   opacity: .5;
